# razer-rs

./: Cargo.toml  LICENSE  README.md
src/: args.rs  devices.rs  lib.rs  main.rs
